--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work — Darren Steptoe</title>
-  <meta name="description" content="Film and media work by Darren Steptoe." />
+  <meta name="description" content="Film, media, and project work by Darren Steptoe." />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -13,10 +13,9 @@
 
     <header class="header">
       <h1 class="title">Work</h1>
-      <p class="sub">Film and media</p>
+      <p class="sub">Selected projects and recognition</p>
     </header>
 
-    <!-- Search -->
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
         <label class="srOnly" for="q">Search</label>
@@ -37,7 +36,6 @@
       <ul id="results" class="results" aria-live="polite"></ul>
     </section>
 
-    <!-- Navigation -->
     <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
       <ul class="links">
@@ -51,12 +49,8 @@
       </ul>
     </section>
 
-    <!-- IMDb -->
     <section class="panel" aria-label="IMDb">
       <h2 class="h2">IMDb</h2>
-      <p>
-        Film credits and additional work can be found on IMDb:
-      </p>
       <p>
         <a
           href="https://www.imdb.com/name/nm12602714/?ref_=nv_sr_srsg_0_tt_0_nm_8_in_0_q_darren%2520steptoe"
@@ -68,18 +62,11 @@
       </p>
     </section>
 
-    <!-- Documentary -->
     <section class="panel" aria-label="Documentary">
       <h2 class="h2">Documentary</h2>
+      <p><strong>Role:</strong> Co-producer · Co-writer · Editor</p>
 
-      <p>
-        <strong>Role:</strong> Co-producer · Co-writer · Editor
-      </p>
-
-      <p>
-        This documentary received:
-      </p>
-
+      <h3 class="h2" style="margin-top:14px;">Recognition</h3>
       <ul class="links">
         <li>Founder’s Best Story Award — The African Film Festival (TAFF)</li>
         <li>Audience Award for Best Documentary — The Black Film Summit</li>
@@ -97,6 +84,49 @@
           allowfullscreen
         ></iframe>
       </div>
+
+      <p style="margin-top:12px;">
+        <a
+          href="https://youtu.be/ycHys4e6s3Q?si=zBzxtBS0YsfGvDld"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Watch on YouTube
+        </a>
+      </p>
+    </section>
+
+    <section class="panel" aria-label="Academic and institutional work">
+      <h2 class="h2">Academic and Institutional Work</h2>
+      <p>
+        While serving as an AmeriCorps VISTA, I designed and implemented a community-based project
+        that was incorporated into applied sociology coursework at the University of Tampa.
+      </p>
+      <p>
+        The project was featured as a case example in:
+        <a
+          href="https://www.bloomsbury.com/us/national-service-and-volunteerism-9780739196946/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          National Service and Volunteerism (Bloomsbury)
+        </a>
+      </p>
+    </section>
+
+    <section class="panel" aria-label="AmeriCorps service and recognition">
+      <h2 class="h2">AmeriCorps</h2>
+      <p>
+        Awards / recognition:
+      </p>
+      <ul class="links">
+        <li>[Award name] — [Year / granting body]</li>
+        <li>[Award name] — [Year / granting body]</li>
+        <li>[Award name] — [Year / granting body]</li>
+      </ul>
+      <p>
+        Replace the placeholders above with the exact award titles as they appear on certificates or program records.
+      </p>
     </section>
 
     <footer class="footer">
