--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
       <p>
-        This is placeholder text for an about section. It will eventually describe
-        who I am, what I work on, and why this site exists. For now, it exists only
-        to establish structure and spacing.
+        I’m Darren Steptoe! Welcome to the site. This space is intended to for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, music, and research. Check in periodically for updates.
       </p>
     </section>
 
