--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <li><a href="./books.html">Books</a></li>
         <li><a href="./work.html">Work</a></li>
         <li><a href="./music.html">Music</a></li>
-        <li><a href="./live.html">Live</a></li>
+        <li><a href="./livestream.html">Livestream</a></li>
+        <li><a href="./research.html">Projects & Research</a>a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </section>
