--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <li><a href="./work.html">Work</a></li>
         <li><a href="./music.html">Music</a></li>
         <li><a href="./livestream.html">Livestream</a></li>
-        <li><a href="./research.html">Projects & Research</a>a></li>
+        <li><a href="./research.html">Projects & Research</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </section>
