--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <ul id="results" class="results" aria-live="polite"></ul>
     </section>
 
-    <!-- About Me -->
-    <section class="panel" aria-label="About Me">
+    <!-- About -->
+    <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
       <p>
         I’m Darren Steptoe! Welcome to the site. This space is intended to for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, music, and research. Check in periodically for updates.
