--- a/work.html
+++ b/work.html
@@ -120,13 +120,9 @@
         Awards / recognition:
       </p>
       <ul class="links">
-        <li>[Award name] — [Year / granting body]</li>
-        <li>[Award name] — [Year / granting body]</li>
-        <li>[Award name] — [Year / granting body]</li>
+        <li>President's Volunteer Service Award — [2011 / CNCS]</li>
+        <li>Congressional Award — [2011 / CNCS]</li>
       </ul>
-      <p>
-        Replace the placeholders above with the exact award titles as they appear on certificates or program records.
-      </p>
     </section>
 
     <footer class="footer">
