--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
         Awards / recognition:
       </p>
       <ul class="links">
-        <li>President's Volunteer Service Award — [2011 / CNCS]</li>
+        <li>The President's Volunteer Service Award — [2011 / CNCS]</li>
         <li>Congressional Award — [2011 / CNCS]</li>
       </ul>
     </section>
