--- a/fantasy.html
+++ b/fantasy.html
@@ -117,6 +117,7 @@
     <section class="panel" aria-label="Settings snapshot">
       <h2 class="h2">Settings Snapshot</h2>
       <ul class="links">
+        <li>Hosting site: NFL.com</li>
         <li>League name: Blitzed and Confused</li>
         <li>League ID: 12709265</li>
         <li>Draft: Live · Standard · 90 seconds per pick</li>
