--- a/fantasy.html
+++ b/fantasy.html
@@ -51,7 +51,7 @@
 
     <section class="panel" aria-label="LeagueSafe">
       <h2 class="h2">All league funds are securely collected and distributed through LeagueSafe.com</h2>
-      <p>Entry fee: <strong>$25</strong></p>
+      <p>Entry fee: <strong>$25 + Processing fee</strong></p>
       <p>
         <a href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">
           https://www.leaguesafe.com/join/4351949
