--- a/fantasy.html
+++ b/fantasy.html
@@ -60,7 +60,7 @@
     </section>
 
     <section class="panel" aria-label="Last season results">
-      <h2 class="h2">Last Season Results</h2>
+      <h2 class="h2">2025-26 Season Results</h2>
       <ul class="links">
         <li>🏆 <strong>No Malice</strong></li>
         <li>🥈 Penei for your thoughts</li>
