--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
       <p>
-        I’m Darren Steptoe! Welcome to the site. This space is intended to for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, music, and research. Check in periodically for updates.
+        I’m Darren Steptoe! Welcome to the site. This space is intended for curious newcomers and those already acquainted with me and my work, providing effortless access to my creations including short films, livestreams, music, and research. Check in periodically for updates.
+      </p>
+    </section>
+
+    <!-- Payment -->
+    <section class="panel" aria-label="Payments">
+      <h2 class="h2">Payments</h2>
+      <p>
+        For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, Google Pay, or bank transfer.
+      </p>
+      <p>
+        <a
+          href="https://pay.darrensteptoe.com/b/8x26oJ1DL6vHcraft02Fa00"
+          target="_blank"
+          rel="noopener"
+        >
+          Pay Invoice →
+        </a>
       </p>
     </section>
 
