--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
       <p class="sub">Personal website</p>
     </header>
 
+    <!-- Navigation (FIRST BOX) -->
+    <section class="panel" aria-label="Navigation">
+      <h2 class="h2">Pages</h2>
+      <ul class="links">
+        <li><a href="./fantasy.html">Fantasy Football</a></li>
+        <li><a href="./books.html">Books</a></li>
+        <li><a href="./work.html">Work</a></li>
+        <li><a href="./music.html">Music</a></li>
+        <li><a href="./livestream.html">Livestream</a></li>
+        <li><a href="./research.html">Projects & Research</a></li>
+        <li>
+          <a href="#" id="open-calendly">Schedule a Call</a>
+        </li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </section>
+
     <!-- Search -->
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
@@ -62,25 +79,22 @@
       </p>
     </section>
 
-    <!-- Navigation -->
-    <section class="panel" aria-label="Navigation">
-      <h2 class="h2">Pages</h2>
-      <ul class="links">
-        <li><a href="./fantasy.html">Fantasy Football</a></li>
-        <li><a href="./books.html">Books</a></li>
-        <li><a href="./work.html">Work</a></li>
-        <li><a href="./music.html">Music</a></li>
-        <li><a href="./livestream.html">Livestream</a></li>
-        <li><a href="./research.html">Projects & Research</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
-    </section>
-
     <footer class="footer">
       <p>© <span id="year"></span> Darren Steptoe</p>
     </footer>
 
   </main>
+
+  <!-- Calendly Overlay -->
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+  <script>
+    document.getElementById("open-calendly").addEventListener("click", function (e) {
+      e.preventDefault();
+      Calendly.initPopupWidget({
+        url: "https://calendly.com/YOUR_USERNAME/YOUR_EVENT"
+      });
+    });
+  </script>
 
   <script src="./search.js"></script>
 </body>
