--- a/index.html
+++ b/index.html
@@ -16,23 +16,6 @@
       <p class="sub">Personal website</p>
     </header>
 
-    <!-- Navigation (FIRST BOX) -->
-    <section class="panel" aria-label="Navigation">
-      <h2 class="h2">Pages</h2>
-      <ul class="links">
-        <li><a href="./fantasy.html">Fantasy Football</a></li>
-        <li><a href="./books.html">Books</a></li>
-        <li><a href="./work.html">Work</a></li>
-        <li><a href="./music.html">Music</a></li>
-        <li><a href="./livestream.html">Livestream</a></li>
-        <li><a href="./research.html">Projects & Research</a></li>
-        <li>
-          <a href="#" id="open-calendly">Schedule a Call</a>
-        </li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
-    </section>
-
     <!-- Search -->
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
@@ -54,6 +37,17 @@
       <ul id="results" class="results" aria-live="polite"></ul>
     </section>
 
+    <!-- Calendly -->
+    <section class="panel" aria-label="Schedule">
+      <h2 class="h2">Schedule</h2>
+
+      <div
+        class="calendly-inline-widget"
+        data-url="https://calendly.com/me--ujg"
+        style="width:100%;height:700px;">
+      </div>
+    </section>
+
     <!-- About -->
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
@@ -62,7 +56,7 @@
       </p>
     </section>
 
-    <!-- Payment -->
+    <!-- Payments -->
     <section class="panel" aria-label="Payments">
       <h2 class="h2">Payments</h2>
       <p>
@@ -79,23 +73,27 @@
       </p>
     </section>
 
+    <!-- Navigation -->
+    <section class="panel" aria-label="Navigation">
+      <h2 class="h2">Pages</h2>
+      <ul class="links">
+        <li><a href="./fantasy.html">Fantasy Football</a></li>
+        <li><a href="./books.html">Books</a></li>
+        <li><a href="./work.html">Work</a></li>
+        <li><a href="./music.html">Music</a></li>
+        <li><a href="./livestream.html">Livestream</a></li>
+        <li><a href="./research.html">Projects & Research</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </section>
+
     <footer class="footer">
       <p>© <span id="year"></span> Darren Steptoe</p>
     </footer>
 
   </main>
 
-  <!-- Calendly Overlay -->
-  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-  <script>
-    document.getElementById("open-calendly").addEventListener("click", function (e) {
-      e.preventDefault();
-      Calendly.initPopupWidget({
-        url: "https://calendly.com/YOUR_USERNAME/YOUR_EVENT"
-      });
-    });
-  </script>
-
   <script src="./search.js"></script>
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
 </body>
 </html>
