--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       <p class="sub">Personal website</p>
     </header>
 
+    <!-- Pages -->
+    <section class="panel" aria-label="Navigation">
+      <h2 class="h2">Pages</h2>
+      <ul class="links">
+        <li><a href="./fantasy.html">Fantasy Football</a></li>
+        <li><a href="./books.html">Books</a></li>
+        <li><a href="./work.html">Work</a></li>
+        <li><a href="./music.html">Music</a></li>
+        <li><a href="./livestream.html">Livestream</a></li>
+        <li><a href="./research.html">Projects & Research</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </section>
+
     <!-- Search -->
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
@@ -37,17 +51,6 @@
       <ul id="results" class="results" aria-live="polite"></ul>
     </section>
 
-    <!-- Calendly -->
-    <section class="panel" aria-label="Schedule">
-      <h2 class="h2">Schedule</h2>
-
-      <div
-        class="calendly-inline-widget"
-        data-url="https://calendly.com/me--ujg"
-        style="width:100%;height:700px;">
-      </div>
-    </section>
-
     <!-- About -->
     <section class="panel" aria-label="About">
       <h2 class="h2">About</h2>
@@ -56,11 +59,11 @@
       </p>
     </section>
 
-    <!-- Payments -->
+    <!-- Payment -->
     <section class="panel" aria-label="Payments">
-      <h2 class="h2">Payments</h2>
+      <h2 class="h2">Payment</h2>
       <p>
-        For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, Google Pay, or bank transfer.
+        For invoices, deposits, or project payments, you can securely pay online using card, Apple Pay, or Google Pay.
       </p>
       <p>
         <a
@@ -73,18 +76,15 @@
       </p>
     </section>
 
-    <!-- Navigation -->
-    <section class="panel" aria-label="Navigation">
-      <h2 class="h2">Pages</h2>
-      <ul class="links">
-        <li><a href="./fantasy.html">Fantasy Football</a></li>
-        <li><a href="./books.html">Books</a></li>
-        <li><a href="./work.html">Work</a></li>
-        <li><a href="./music.html">Music</a></li>
-        <li><a href="./livestream.html">Livestream</a></li>
-        <li><a href="./research.html">Projects & Research</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-      </ul>
+    <!-- Calendly -->
+    <section class="panel" aria-label="Schedule">
+      <h2 class="h2">Schedule</h2>
+
+      <div
+        class="calendly-inline-widget"
+        data-url="https://calendly.com/me--ujg"
+        style="min-width:320px;height:700px;">
+      </div>
     </section>
 
     <footer class="footer">
