--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header class="header">
       <h1 class="title">Darren Steptoe</h1>
-      <p class="sub">Videographer | Content Creator | Author </p>
+      <p class="sub">Artist | Author | Content Creator</p>
     </header>
 
     <!-- Pages -->
